--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -13,7 +13,7 @@ body {
     background-color: #FAF7EB;
     /*background: linear-gradient(#191D88, #4052ab); */
     height: 1000px;
-    min-width: 500px;
+    /*min-width: 500px; */
 }
 
 
