--- a/app/styles/Listings.module.css
+++ b/app/styles/Listings.module.css
@@ -6,19 +6,16 @@
     justify-content: space-evenly;
 }
 
+/* Left Column | Job Listings */
 .listings-container {
     background-color: gray;
     width: 20%;
     min-width: 350px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
-
-.details-container {
-    background-color: gray;
-    width: 75%;
-    border-radius: 5px;
-}
-
 
 .cards {
     display: flex;
@@ -32,6 +29,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
+    margin-right: 10px;
 }
 
 .text {
@@ -50,15 +48,20 @@
     color: black;
     font-weight: bold;
 }
-.position {
+.seats {
     color: black;
     font-weight: bold;
 }
 
 
-
+/* Right Column | Details */
+.details-container {
+    background-color: gray;
+    width: 75%;
+    border-radius: 5px;
+}
 
 .details {
-    background-color: royalblue;
+    background-color: darkred;
     color: white;
 }
