--- a/app/styles/Listings.module.css
+++ b/app/styles/Listings.module.css
@@ -21,15 +21,13 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    padding: 10px;
+    padding: 15px;
     border: solid 2px;
     border-color: gray;
 }
-.rankings {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    margin-right: 10px;
+.card-logo{
+    margin: 0;
+    padding-right: 20px;
 }
 
 .text {
