--- a/app/styles/Navbar.module.css
+++ b/app/styles/Navbar.module.css
@@ -15,6 +15,8 @@
 
 .signout {
     display: flex;
+    align-items: center;
+    text-align: center;
 }
 
 .button {
@@ -25,6 +27,7 @@
     background-color: var(--blue);
     color: white;
     cursor: pointer;
+    width: 140px;
 }
 .button:hover {
     background-color: var(--yellow);
@@ -35,3 +38,4 @@
     2) Min width for minimizing screen?
     3) button gets bigger when resizing?
 */
+
