--- a/app/styles/Navbar.module.css
+++ b/app/styles/Navbar.module.css
@@ -1,41 +1,73 @@
+.navbar_container {
+    padding: 16px 16px;
+    display: flex;
+    justify-content: space-between;
+} 
+
 .navbar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-}
-
-.links {
-    padding: 25px;
-    cursor: pointer;
-    text-decoration: none;
-}
-.links:hover {
-    color: var(--yellow);
-}
-
-.signout {
-    display: flex;
     align-items: center;
-    text-align: center;
+    flex-grow: 1;
+}
+
+.navbar_list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.navbar_list_primary {
+    margin: 0 auto;
+}
+
+.navbar_link {
+    text-decoration: none;
+    color: black;
+    transition: all 0.5s;
+}
+
+.navbar_link:hover {
+    color: var(--blue);
 }
 
 .button {
-    margin-left: 30px;
-    padding: 15px 25px;
-    border-radius: 50px;
-    border: none;
-    background-color: var(--blue);
-    color: white;
     cursor: pointer;
-    width: 140px;
-}
-.button:hover {
-    background-color: var(--yellow);
+    font-weight: bold;
+    color: white;
+    border-radius: 40px;
+    width: 110px;
+    height: 50px;
+    border: none;
+    transition: all 0.5s;
 }
 
-/*
-    FIXME: 1) Get Button LINK Working with styling during onClick
-    2) Min width for minimizing screen?
-    3) button gets bigger when resizing?
-*/
+.bg_blue {
+    background: var(--blue);
+}
+
+.img {
+    margin: 0px 0px;
+    transition: all 0.5s;
+}
+
+@media (max-width: 1036px) {
+    .navbar_link {
+        font-size: 14px;
+    }
+
+    .button {
+        font-size: 12px;
+        width: 90px;
+        height: 40px;
+    }
+
+    .img {
+        width: 145px;
+        height: 45px;
+    }
+}
 
