--- a/app/styles/Listings.module.css
+++ b/app/styles/Listings.module.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    padding: 5px 0 5px 5px;
+    padding: 5px 10px 10px 5px;
 }
 
 
@@ -30,11 +30,18 @@
     padding: 15px;
     border: solid 2px;
     border-color: gray;
+    border-radius: 4px;
+    margin: 2px;
 }
 .card-logo{
     margin: 0;
     padding-right: 20px;
 }
+.cards:hover {
+    background-color: var(--yellow_hover);
+    transition: all 0.3s;
+}
+
 
 .text {
     margin: 0;
@@ -68,16 +75,16 @@
     position: relative;
     display: flex;
     justify-content: center;
-    padding: 5px;
+    padding: 10px;
     text-align: left;
 }
 .details {
     background-color: white;
     border-radius: 10px;
-    min-width: 650px;
     padding: 80px;
     padding-top: 50px;
     overflow: auto;
+    width: 700px;
 }
 
 
@@ -101,7 +108,6 @@
 .about_card {
     display: flex;
     flex-direction: column;
-    width: 200px;
     padding-bottom: 10px;
 }
 .about_heading {
@@ -128,8 +134,13 @@
     cursor: pointer;
     box-shadow: 1px 3px 10px gray;
 }
+.button:hover {
+    background-color: var(--yellow_hover);
+    transition: all 0.2s
+}
 .button:active {
     box-shadow: none;
+    transform: translateY(2px);
 }
 
 
