--- a/app/styles/applicants.module.css
+++ b/app/styles/applicants.module.css
@@ -26,7 +26,7 @@
     border-radius: 8px;
     margin-bottom: 0px;
     font-size: 17px;
-    padding-left:1.9%;
+    padding-left: 1.9%;
     padding-right: 0.8%;
 }
 
@@ -36,6 +36,7 @@
     flex-direction: column;
     margin-left:15px;
     align-items: start;
+    border: solid;
 }
 
 .accordion {
@@ -50,7 +51,9 @@
     padding: 10px;
 }
 .accordion li label {
+    width: 100%;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     font-size: 16px;
@@ -60,10 +63,21 @@
 .accordion li label p {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-left: 20px;
     align-items: start;
+    border: solid;
 }
+
+/*Ignore this - i was experimenting */
+/* .accordion li label .labels {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-left: 20px;
+    align-items: start;
+} */
+
 
 /* Put some text b4 the label text */
 .accordion li label::before {
