--- a/app/styles/ProfilePage.module.css
+++ b/app/styles/ProfilePage.module.css
@@ -383,3 +383,19 @@
     background-color: #E4DFD0; 
     margin: 0 10px; 
   }
+
+.message {
+position: absolute; 
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+background-color: #dff0d8;
+color: #3c763d;
+padding: 20px; 
+border-radius: 5px;
+z-index: 100; 
+width: 50%;
+font-size: 1.5em; 
+text-align: center;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
